# young-fibonacciCorrespondance

./: CMakeLists.txt  README.md  algorithms.cpp  display.cpp  involution.cpp  main.cpp  testAlgorithms.cpp
benchmark/: benchmark.cpp  benchmarkCilk.cpp  benchmarks.cpp  data.cpp
include/: algorithms.hpp  display.hpp  involution.hpp  involutionChainList.hpp  permAVX.hpp  permutation.hpp  testAVX.hpp
include/algorithms/: janvierInsertion.hpp  permuToChains.hpp  robyInsertion.hpp
src/: algorithms.cpp  avxLib.cpp  display.cpp  involution.cpp  involutionChainList.cpp  permuToChainAVX.cpp  robyInsertion.cpp  testAVX.cpp
test/: test  test.cpp  testAVX.cpp  testAlgorithms.cpp
